[gd_scene load_steps=56 format=3 uid="uid://b2ah0egiqed7p"]

[ext_resource type="Script" uid="uid://csrh7qwla6xbw" path="res://scripts/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://c3qyk5r06pb3k" path="res://assets/sprites/mobs/spider01.png" id="2_cjpfl"]
[ext_resource type="PackedScene" uid="uid://l5k315b17od4" path="res://scenes/ui/OverheadDisplay.tscn" id="3_4ra3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sdkqh"]
atlas = ExtResource("2_cjpfl")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih1lv"]
atlas = ExtResource("2_cjpfl")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv715"]
atlas = ExtResource("2_cjpfl")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf3vg"]
atlas = ExtResource("2_cjpfl")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s4wc"]
atlas = ExtResource("2_cjpfl")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7m53"]
atlas = ExtResource("2_cjpfl")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iejlx"]
atlas = ExtResource("2_cjpfl")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtv7m"]
atlas = ExtResource("2_cjpfl")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wycgu"]
atlas = ExtResource("2_cjpfl")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4hsl"]
atlas = ExtResource("2_cjpfl")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dksy3"]
atlas = ExtResource("2_cjpfl")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjbiy"]
atlas = ExtResource("2_cjpfl")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kad21"]
atlas = ExtResource("2_cjpfl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_602c2"]
atlas = ExtResource("2_cjpfl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxf80"]
atlas = ExtResource("2_cjpfl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_553yn"]
atlas = ExtResource("2_cjpfl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1yn5"]
atlas = ExtResource("2_cjpfl")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hed2j"]
atlas = ExtResource("2_cjpfl")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d84u"]
atlas = ExtResource("2_cjpfl")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gycts"]
atlas = ExtResource("2_cjpfl")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olq5w"]
atlas = ExtResource("2_cjpfl")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcyao"]
atlas = ExtResource("2_cjpfl")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c0dx"]
atlas = ExtResource("2_cjpfl")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvwyu"]
atlas = ExtResource("2_cjpfl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m2hr"]
atlas = ExtResource("2_cjpfl")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg5od"]
atlas = ExtResource("2_cjpfl")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwcpo"]
atlas = ExtResource("2_cjpfl")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88v36"]
atlas = ExtResource("2_cjpfl")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0bea"]
atlas = ExtResource("2_cjpfl")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i2j8"]
atlas = ExtResource("2_cjpfl")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5ef2"]
atlas = ExtResource("2_cjpfl")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6278"]
atlas = ExtResource("2_cjpfl")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kxxn"]
atlas = ExtResource("2_cjpfl")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkqa1"]
atlas = ExtResource("2_cjpfl")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncwiw"]
atlas = ExtResource("2_cjpfl")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1caf"]
atlas = ExtResource("2_cjpfl")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjcgq"]
atlas = ExtResource("2_cjpfl")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g03pq"]
atlas = ExtResource("2_cjpfl")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcm7a"]
atlas = ExtResource("2_cjpfl")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5a7u"]
atlas = ExtResource("2_cjpfl")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj4kk"]
atlas = ExtResource("2_cjpfl")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4x7q"]
atlas = ExtResource("2_cjpfl")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_121ul"]
atlas = ExtResource("2_cjpfl")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_te3kd"]
atlas = ExtResource("2_cjpfl")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_edpa4"]
atlas = ExtResource("2_cjpfl")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg60h"]
atlas = ExtResource("2_cjpfl")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_82n14"]
atlas = ExtResource("2_cjpfl")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuc7m"]
atlas = ExtResource("2_cjpfl")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_20yfm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdkqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih1lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv715")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf3vg")
}],
"loop": false,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s4wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7m53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iejlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtv7m")
}],
"loop": false,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wycgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4hsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dksy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjbiy")
}],
"loop": false,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kad21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_602c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxf80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_553yn")
}],
"loop": false,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1yn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hed2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d84u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gycts")
}],
"loop": false,
"name": &"hurt_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1yn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hed2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d84u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gycts")
}],
"loop": false,
"name": &"hurt_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1yn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hed2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d84u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gycts")
}],
"loop": false,
"name": &"hurt_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1yn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hed2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d84u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gycts")
}],
"loop": false,
"name": &"hurt_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_olq5w")
}],
"loop": false,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcyao")
}],
"loop": false,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c0dx")
}],
"loop": false,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvwyu")
}],
"loop": false,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m2hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg5od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwcpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88v36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0bea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i2j8")
}],
"loop": false,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5ef2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6278")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kxxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkqa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncwiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1caf")
}],
"loop": false,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjcgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g03pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcm7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5a7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj4kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4x7q")
}],
"loop": false,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_121ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te3kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edpa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg60h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82n14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuc7m")
}],
"loop": false,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7k104"]
size = Vector2(41, 41)

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 506.04843

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(61.640625, 52.328125)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 4
platform_floor_layers = 4278190082
script = ExtResource("1_4gyqm")
ATTACK_RANGE = 50.0
respawn_radius = 1000.0

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_20yfm")
animation = &"attack_down"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_7k104")

[node name="FollowArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
position = Vector2(5, 1)
shape = SubResource("CircleShape2D_4gyqm")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(6, 3)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 6.514
one_shot = true

[node name="BodyLingerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0

[node name="OverheadDisplay" parent="." instance=ExtResource("3_4ra3w")]

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="FollowArea" to="." method="_on_follow_area_body_entered"]
[connection signal="body_exited" from="FollowArea" to="." method="_on_follow_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="BodyLingerTimer" to="." method="_on_body_linger_timer_timeout"]
